--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Welcome
-    </title>
+<html>
+<head><meta charset="utf-8" />
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<title>Pre-Merger</title>
 </head>
+<body>
+
+        <a href="index.html" class="btn btn-outline-primary" tabindex="-1" role="button" aria-disabled="false">Home</a>
+
+        <a href="#" class="btn btn-outline-info" tabindex="-1" role="button" aria-disabled="false">Analysis Overview</a>
+
+        <a href="WebVisualizations/Pages/pre_merger.html" class="btn btn-outline-dark" tabindex="-1" role="button" aria-disabled="false">Pre-Merger</a>
+
+        <a href="eighties.html" class="btn btn-outline-danger" tabindex="-1" role="button" aria-disabled="false">1980s</a>
+
+        <a href="nineties.html" class="btn btn-outline-secondary" tabindex="-1" role="button" aria-disabled="false">1990s</a>
+
+        <a href="aughts.html" class="btn btn-outline-primary" tabindex="-1" role="button" aria-disabled="false">2000s</a>
+
+        <a href="tens.html" class="btn btn-outline-success" tabindex="-1" role="button" aria-disabled="false">2010s</a>
+
+        <a href="#" class="btn btn-outline-info" tabindex="-1" role="button" aria-disabled="false">Data</a>
+      
 <body>
     
 </body>
