Populated the Analysis Overview Page

--- a/WebVisualizations/Pages/nineties.html
+++ b/WebVisualizations/Pages/nineties.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-        <a href="#" class="btn btn-outline-primary" tabindex="-1" role="button" aria-disabled="false">Home</a>
+        <a href="../../index.html" class="btn btn-outline-primary" tabindex="-1" role="button" aria-disabled="false">Home</a>
 
-        <a href="#" class="btn btn-outline-info" tabindex="-1" role="button" aria-disabled="false">Analysis Overview</a>
+        <a href="analysis_overview.html" class="btn btn-outline-info" tabindex="-1" role="button" aria-disabled="false">Analysis Overview</a>
 
         <a href="pre_merger.html" class="btn btn-outline-dark" tabindex="-1" role="button" aria-disabled="false">Pre-Merger</a>
 
@@ -56,7 +56,7 @@
    
         <p>I like this chart because there are five clear outliers and those outliers, (Kobe Bryant, Shaquille O'Neal, Kevin Garnett, Tim Duncan, and Dirk Nowitzki) are, without a doubt, the five best players of this generation (Honorable Mention to Steve Nash).
 
-        <p>I find it interesting how Tim Duncan and Dirk Nowitzki are practically in the same spot of the chart. Both players were the foundation of their franchises, the Spurs and Mavericks respectively, and led their teams to over a decade and a half of NBA playoff berths. Both players also repeatedly took hometown discounts so that their teams would have more cap space to sign other players. These discounts skewed their career earnings downwards by at least $10 Million.
+        <p>I find it interesting how Tim Duncan and Dirk Nowitzki are practically in the same spot of the chart. Both players were the foundation of their franchises, the Spurs and Mavericks respectively, and led their teams to over a decade and a half of NBA playoff berths. Both players also repeatedly took hometown discounts so that their teams would have more cap space to sign other players. These discounts skewed their career earnings downwards by at least $10 Million. Yet, playing their entire careers in Texas, where there is no state income tax, may have made up some of the difference.
 
         </div></div></div></div>
         <div class='row'>
