--- a/WebVisualizations/Pages/aughts.html
+++ b/WebVisualizations/Pages/aughts.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 
-        <a href="#" class="btn btn-outline-primary" tabindex="-1" role="button" aria-disabled="false">Home</a>
+        <a href="../../index.html" class="btn btn-outline-primary" tabindex="-1" role="button" aria-disabled="false">Home</a>
 
-        <a href="#" class="btn btn-outline-info" tabindex="-1" role="button" aria-disabled="false">Analysis Overview</a>
+        <a href="analysis_overview.html" class="btn btn-outline-info" tabindex="-1" role="button" aria-disabled="false">Analysis Overview</a>
 
         <a href="pre_merger.html" class="btn btn-outline-dark" tabindex="-1" role="button" aria-disabled="false">Pre-Merger</a>
 
@@ -22,10 +22,7 @@
 
         <a href="#" class="btn btn-outline-info" tabindex="-1" role="button" aria-disabled="false">Data</a>
 
-        ​<picture>
-                <source srcset="..." type="image/svg+xml">
-                <img src=".../visualizations/PreMerger.png" class="img-fluid img-thumbnail" alt="...">
-              </picture>
+      
   
     <div>
         
