Calculated the most overpaid and underpaid players.

--- a/WebVisualizations/Pages/analysis_overview.html
+++ b/WebVisualizations/Pages/analysis_overview.html
@@ -25,11 +25,15 @@
     
     <div class='row'>
     <div class="col-md-6">
+    <center><h2><strong>Goal</strong></h2></center>
+    <ul>
+    <li>I wanted to see who the most overpaid and underpaid players in NBA history were. To do this, I plotted every NBA player's career earnings vs. their career Win Shares and use a line of best fit to determine the expected on-court production of each player and whether or not they lived up to it. Feel free to scroll over the chart to see how every NBA player did. </ul>
     <center><h2><strong>Data Limitations</strong></h2></center>
     <ul>
     <li>Much of the data before the 1976 NBA-ABA merger is incomplete. As a result, all-time great players like Bill Russell and Wilt Chamberlain aren't on the list. The NBA before the merger was also a different league from the one we know today. This is why I split the data into a "Pre-Merger"category and added players drafted from 1976-1979 into the "1980s" category.
     <li>While the data from the two .csv files that I used had the earnings for each player for every year, I could not get the individual stats for each player for each year. Instead, the data only had a player's career stats (Career Points Per Game, Career PER, Career Win Shares etc.) as opposed to their PPG, Win Shares in a given year. I decided to evaluate players by "Career Win Shares" because Win Shares is an advance, catch-all analytic and because I could use it to compare the total value of their on-court production compared to the total money they earned over the course of their career.
     <li>These charts do not account for injuries. Many star players will lose seasons due to an ACL or achilles tear, yet still get paid while they are sidelined. Thus, their Career Earnings will increase while they won't have an opportunity to increase their Career Win Shares. In the long run, they may seem relatively overpaid even if they were outplaying their contract when healthy.
+    <li>The data does not factor in playoff performance. Some teams (the San Antonio Spurs, last year's Toronto Raptors) rest their star players during the regular season to make sure they're healthy and ready for the playoffs. Other players (James Harden, Russell Westbrook) tend to go full throttle for 82 games. LeBron James, who has been accused of "coasting" through the regular season at times, has played <a href='https://www.basketball-reference.com/players/j/jamesle01/gamelog-playoffs/'>239 playoff games in his career</a>. That's almost three extra seasons of intense basketball. Imagine what his career Win Shares would be if they factored in his playoff production.
     </ul>
     <center><h2><strong>Other Factors</strong></h2></center>
     <ul>
@@ -46,7 +50,11 @@
     <li><strong>1999:</strong> After ending the '98-'99 lockout, the <a href='http://www.cbafaq.com/salarycap#Q7'>NBA establishes maximum contracts</a> for players, limiting the amount that the league's highest paid superstars can make. The NBA also establishes a luxury tax which makes it more costly for teams to spend over the salary cap.
     <li><strong>2016:</strong> The NBA <a href='https://www.si.com/nba/2014/10/05/new-nba-tv-deal-worth-24-billion'>renews it's television deal with ESPN and Turner sports</a>, going from making $966 Million/year to $2.46 Billion/year. This drastically increases league revenue and causes the salary cap to jump from $70 Million to $94 Million. That summer and subsequent summers would see record spending sprees on free agents.
     <li><strong>2017:</strong> In an effort to keep star players from leaving in Free Agency, the NBA creates the <a href='http://www.cbafaq.com/salarycap#Q24'>"Designated Player Exception"</a> or "Supermax" contract. John Wall, Steph Curry, Damian Lillard, Russell Westbrook, and James Harden have all signed Supermax contracts to the tune of 4-years, $170-$201 Million.
-    <li><strong>2019:</strong> Daryl Morey's tweet about Hong Kong spurs friction between the NBA and the Chinese government. It is estimated that 10-20% of league revenue could be in jeopardy should the Chinese government cancel its television deal with the NBA.
+    <li><strong>2019:</strong> Daryl Morey's tweet about Hong Kong spurs friction between the NBA and the Chinese government. It is estimated that 10-20% of league revenue could be in jeopardy should the Chinese government cancel its television deal with the NBA. </ul>
+
+    <center><h4><strong>NBA Salary Cap Over Time (Adjusted For Inflation)</strong></h4>
+
+    <img src="Images/salary_cap.png" class="img-fluid" alt="Responsive image" ></center>
 
 
     </body>
