--- a/WebVisualizations/Pages/pre_merger.html
+++ b/WebVisualizations/Pages/pre_merger.html
@@ -3,6 +3,14 @@
 <head><meta charset="utf-8" />
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    
+     <link rel = "stylesheet"
+       type = "text/css"
+       href = "style.css" />
 <title>Pre-Merger</title>
 </head>
 <body>
@@ -54,7 +62,7 @@
         <img src="Images/PreMerger.png" class="img-fluid" alt="Responsive image">
         </div>
         <div class="col-md-7"> <center><div class="box skyblue"><h1>Analysis:</h1></div></center>
-        <p>*Note: The above interactive chart is off by a factor of ten. Ex: Instead of Kareem Abdul-Jabbar making $8.56 Million over his career, he made $85.6 Million.
+        <p><i>*Note: The above interactive chart is off by a factor of ten. Ex: Instead of Kareem Abdul-Jabbar making $8.56 Million over his career, he made $85.6 Million.</i>
 
         <p>Admittedly, assessing the "value" of players during this era does not make the most sense. For one, there was no salary cap established until the 1984-1985 season, so the idea of a player being overpaid or underpaid is hard to gauge given that the budgets of different teams were less standardized in comparison to today.  
             </div></div></div></div>
