--- a/WebVisualizations/Pages/tens.html
+++ b/WebVisualizations/Pages/tens.html
@@ -1,8 +1,17 @@
+<!DOCTYPE html>
 <html>
 <head><meta charset="utf-8" />
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<title>Data: Pre-Merger</title>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+
+ <link rel = "stylesheet"
+   type = "text/css"
+   href = "style.css" />
+
+<title>2010s</title>
 </head>
 <body>
 
@@ -48,5 +57,92 @@
                 
             </script>
         </div>
+<p><center>
+  <a class="btn btn-outline-danger" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Most Overpaid Players ($)</a>
+  <button class="btn btn-outline-success" type="button" data-toggle="collapse" data-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Most Underpaid Players ($)</button>
+  <button class="btn btn-outline-primary" type="button" data-toggle="collapse" data-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2">Toggle Both Elements</button>
+</p>
+<div class="row">
+  <div class="col">
+    <div class="collapse multi-collapse" id="multiCollapseExample1">
+      <div class="card card-body">
+        <table class="table table-hover">
+  <tr>
+  <th colspan='6'>Most Overpaid ($)</th>
+  </tr>
+  <tr>
+  <th>Player</th><th>Career Win Shares</th><th>Career Earnings (Millions)</th><th>Expected Earnings (Millions)</th><th>Percent Overpaid</th><th>Total Overpaid (Millions)</th></tr>
+  <tr class="table-danger">
+  <td>1. Chandler Parsons</td><td>29</td><td>$75.96</td><td>$33.15</td><td>135%</td><td>$44.80</td>
+  </tr>
+  <tr class="table-danger">
+  <td>2. John Wall</td><td>44.3</td><td>$89.67</td><td>$49.64</td><td>80%</td><td>$40.03</td>
+  </tr>
+  <tr class="table-danger">
+  <td>3. Evan Turner</td><td>20.5</td><td>$61.75</td><td>$23.99</td><td>157%</td><td>$37.76</td>
+  </tr>
+    <tr class="table-danger">
+  <td>4. Brandon Knight</td><td>11.6</td><td>$49.89</td><td>$14.40</td><td>246%</td><td>$35.49</td>
+  </tr>
+   <tr class="table-danger">
+  <td>5. Gordon Hayward</td><td>47.9</td><td>$87.00</td><td>$53.52</td><td>62%</td><td>$33.48</td>
+  </tr>
+</row>
+</div>
+</table>
+      </div>
+    </div>
+  </div>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="collapse multi-collapse" id="multiCollapseExample2">
+      <div class="card card-body">
+
+
+
+      
+        <div class="table-responsive">
+<div class='row'>
+  <table class="table table-hover">
+  <tr>
+  <th colspan='6'>Most Underpaid ($)</th>
+  </tr>
+  <tr>
+  <th>Player</th><th>Career Win Shares</th><th>Career Earnings (Millions)</th><th>Expected Earnings (Millions)</th><th>Percent Underpaid</th><th>Total Underpaid (Millions)</th></tr>
+  <tr class="table-success">
+  <td>1. Nikola Jokic</td><td>39.9</td><td>$4.13</td><td>$43.82</td><td>1061%</td><td>$44.80</td>
+  </tr>
+  <tr class="table-success">
+  <td>2. Karl-Anthony Towns</td><td>45.4</td><td>$17.88</td><td>$50.82</td><td>284%</td><td>$32.94</td>
+  </tr>
+  <tr class="table-success">
+  <td>3. Rudy Gobert</td><td>52.8</td><td>$27.74</td><td>$58.80</td><td>215%</td><td>$31.32</td>
+  </tr>
+    <tr class="table-success">
+  <td>4. Clint Capela</td><td>31.4</td><td>$6.06</td><td>$35.74</td><td>590%</td><td>$29.68</td>
+  </tr>
+   <tr class="table-success">
+  <td>5. Giannis Antetokounmpo</td><td>53.2</td><td>$31.09</td><td>$59.23</td><td>52%</td><td>$28.15</td>
+  </tr>
+</table>
+</div>
+
+      </div>
+    </div>
+  </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
 </body>
 </html>
