Set up the home page

--- a/WebVisualizations/Pages/analysis_overview.html
+++ b/WebVisualizations/Pages/analysis_overview.html
@@ -25,7 +25,7 @@
     
     <div class='row'>
     <div class="col-md-6">
-    <center><h2><strong>Goal</strong></h2></center>
+    <p><center><h2><strong>Goal</strong></h2></center>
     <ul>
     <li>I wanted to see who the most overpaid and underpaid players in NBA history were. To do this, I plotted every NBA player's career earnings vs. their career Win Shares and use a line of best fit to determine the expected on-court production of each player and whether or not they lived up to it. Feel free to scroll over the chart to see how every NBA player did. </ul>
     <center><h2><strong>Data Limitations</strong></h2></center>
@@ -39,9 +39,11 @@
     <ul>
     <li>There's more to life that winning games! Teams may sign players because they're popular and can earn revenue. A player like Jeremy Lin may not have been an all-star for the Houston Rockets, but he definitely helped increase their popularity in China and increased their long-term revenue. Kobe Bryant earned $50 million his last two years in the league despite being a subpar player coming off of an achilles tear. This had largely to do because he continued to make Los Angeles Lakers relevant and one of the hottest tickets in the league.
 
+      <li>Some superstar players like LeBron James earn more money off of the court than on it. Some superstars will give up money to win. Because of that, these players may take a discount on their NBA contract to save cap space for their team. An example of this would be Anthony Davis waiving his $4 Million dollar trade bonus when he joined the Los Angeles Lakers so that his new team could potentially sign another maximum contract player.
+
     </div>
     <div class="col-md-6">
-    <center><h2><strong>Important Events To Consider</strong></h2></center>
+    <p><center><h2><strong>Important Events To Consider</strong></h2></center>
     There are a number of events that greatly changed the salary landscape of the NBA, many of which gave teams more money to spend on players. A player's career earnings depends on the financial circumstances surrounding the league in as much as their talent when negotiating a contract.
     <ul>
     <li><strong>1976:</strong> The NBA and ABA merge, with four teams coming from the ABA to the NBA. This set the stage for the NBA to become the extremely profitable league it is today.
