Added a data table and tweaked the analysis.

--- a/WebVisualizations/Pages/aughts.html
+++ b/WebVisualizations/Pages/aughts.html
@@ -29,7 +29,7 @@
 
         <a href="tens.html" class="btn btn-outline-success" tabindex="-1" role="button" aria-disabled="false">2010s</a>
 
-        <a href="#" class="btn btn-outline-info" tabindex="-1" role="button" aria-disabled="false">Data</a>
+        <a href="data.html" class="btn btn-outline-info" tabindex="-1" role="button" aria-disabled="false">Data</a>
 
       
   
@@ -155,11 +155,14 @@
         <img src="Images/aughts.png" class="img-fluid" alt="Responsive image">
         </div>
         <div class="col-md-7"> 
-        <p>This is the first chart that can be considered as "in progress". While many of these players are out of the league, there are a few notable exceptions (LeBron James, Chris Paul, James Harden, and Steph Curry) that are still going strong. LeBron is a Kareem Abdul-Jabbar level outlier, pushing the graph's boundaries for Win Shares. Chris Paul is surprisingly not far behind. Maybe LeBron will push further ahead given that Paul is in the twilight of his career. 
+        <p>This is the first chart that can be considered as "in progress". While many of these players are out of the league, there are a few notable exceptions (LeBron James, Chris Paul, James Harden, and Steph Curry) that are still going strong. LeBron is a Kareem Abdul-Jabbar level outlier, pushing the graph's boundaries for Win Shares. Chris Paul is surprisingly not far behind. Maybe LeBron will push further ahead given that Paul is in the twilight of his career.
+
+         <p>There are a few clear, memorable albatrosses as well. Joe Johnson, Zach Randolph, and Gilbert Arenas hamstrung their team's respective cap spaces, while Chris Bosh and Derrick Rose unfortunately lost seasons due to injury and medical issues. It must be a painful sight for Knicks fans to see that Carmelo Anthony has made nearly as much money as LeBron James, despite having less than half Win Shares as his 2003 draft class peer. With Patrick Ewing and Carmelo Anthony, the Knicks have unfortunately employed two of the most overpaid players in NBA history.
+
             </div></div></div>
         <div class='row'>
         <div class="col-md-12">
-          <p>There are a few clear, memorable albatrosses as well. Joe Johnson, Zach Randolph, and Gilbert Arenas hamstrung their team's respective cap spaces, while Chris Bosh and Derrick Rose unfortunately lost seasons due to injury and medical issues. It must be a painful sight for Knicks fans to see that Carmelo Anthony has made nearly as much money as LeBron James, despite having less than half Win Shares as his 2003 draft class peer. 
+        
 
         <p>I'm interested to see how this graph changes, especially as players like Chris Paul, James Harden, Russell Westbrook, and Steph Curry cash in on their new $40 Million+/year contracts. Will they remain the high-volume, high-value assets that they've been for years, or will their lucrative contracts skew them above the line of best fit? Perhaps they belong on a different chart altogether.
         </div>
