--- a/WebVisualizations/Pages/eighties.html
+++ b/WebVisualizations/Pages/eighties.html
@@ -29,7 +29,7 @@
 
         <a href="tens.html" class="btn btn-outline-success" tabindex="-1" role="button" aria-disabled="false">2010s</a>
 
-        <a href="#" class="btn btn-outline-info" tabindex="-1" role="button" aria-disabled="false">Data</a>
+        <a href="data.html" class="btn btn-outline-info" tabindex="-1" role="button" aria-disabled="false">Data</a>
 
       
   
@@ -162,12 +162,17 @@
         <p>Yet, it was a lot easier to go over the salary cap in the 90’s. The Bulls, like many other teams, took advantage of Michael Jordan’s “Bird Rights” (a loophole that allows you to have your payroll be over the salary cap to re-sign your own player). Also, since there was no maximum salary restriction at the time, they could upgrade Jordan’s salary from under $4 Million to $33 Million. That year the Bulls led the league with a $61 Million payroll which was 2.26 times the salary cap and $8 Million more than the second-place Knicks. Considering that Jordan’s unprecedented two-year salary ended with two championships, it’s hard to argue that the money wasn't worth it.
 
         <p>This chart, like the other ones that follow it will have some household names as outliers. Scottie Pippen, Karl Malone, Patrick Ewing, David Robinson among others are all in the Hall of Fame. Being an outlier on these charts usually coincides with a player being a hall of famer. Yet all of them are left of the line of best fit, implying that they were all overpaid for their production. But considering the number championships that players of Olajuwon, Pippen, and Robinson's caliber won and the relatively lax salary cap rules of the '80s, many of these investments appear to have paid off.
+
         </div>
+  
         <div class="col-md-5">
         <img src="Images/Michael_Jordan_Salary.png" class="img-fluid" alt="Responsive image">
         
 
         </div>
         </div>
+
+        <div class="coll-md-12">
+            <p> My last point would be that this era was characterized by its relative "haves" and the "have nots." Star players made most of the money without much room for middling salaries. The most extreme example is between Patrick Ewing and Adrian Dantley, where Ewing had slightly fewer win shares (126 to Dantley's 134), yet Ewing made $125 Million compared to Dantley's $4 Million or 31.25x as much money. As we will see in subsequent decades, the NBA's institution of the maximum contract in 1999 would narrow this gap and create a middle class.
 </body>
 </html>
