--- a/WebVisualizations/Pages/analysis_overview.html
+++ b/WebVisualizations/Pages/analysis_overview.html
@@ -21,7 +21,7 @@
 
         <a href="tens.html" class="btn btn-outline-success" tabindex="-1" role="button" aria-disabled="false">2010s</a>
 
-        <a href="#" class="btn btn-outline-info" tabindex="-1" role="button" aria-disabled="false">Data</a>
+        <a href="data.html" class="btn btn-outline-info" tabindex="-1" role="button" aria-disabled="false">Data</a>
     
     <div class='row'>
     <div class="col-md-6">
