--- a/WebVisualizations/Pages/pre_merger.html
+++ b/WebVisualizations/Pages/pre_merger.html
@@ -29,7 +29,7 @@
 
         <a href="tens.html" class="btn btn-outline-success" tabindex="-1" role="button" aria-disabled="false">2010s</a>
 
-        <a href="#" class="btn btn-outline-info" tabindex="-1" role="button" aria-disabled="false">Data</a>
+        <a href="data.html" class="btn btn-outline-info" tabindex="-1" role="button" aria-disabled="false">Data</a>
 
       
   
